--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   background-color: darkblue;
 }
 
-.Display{
+.Disp{
   border: 1px solid black;
   background-color: white !important;
   font-size: 2rem;
